2006-04-18  Rodney Dawes  <dobey@novell.com>

	* legaciy-icon-mapping.xml: Add links to system-software-update for
	update-manager and zen-icon
	Add odg mime type as link to image-x-generic
	Add distributor-logo and novell-button as links for start-here
	Move stock_volume-0 to audio-volume-low instead of -muted

2006-04-17  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Declare standalone="yes" in the XML
	declaration, to avoid having XML::Parser attempt to laod the DTD from
	the same directory as the XML, when using libxml-sax-perl-expat

2006-04-11  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add links for zoom-* icons
	Partial patch from Luca Ferretti <elle.uca@libero.it>

	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=6506

2006-03-05  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Move folder_open link to folder-open icon

	Fixes #6050

2006-02-24  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.7.1 for release

2006-02-24  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Move all the nm-* aliases to the network-*
	icons under the status context
	Add new network-wireless-{high,medium,low} status icons with links to
	the nm-signal-* wireless status icons

2006-02-17  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up versioon to 0.7.0 for release

2006-02-15  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add links to the new network status icon
	names, for the old gnome-netstatus icon names

2006-02-14  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add some links for NetworkManager icons

2006-02-07  Rodney Dawes  <dobey@novell.com>

	* configure.ac: Up version to 0.6.8 for release

2006-02-07  Rodney Dawes  <dobey@novell.com>

	* legacy-icon-mapping.xml: Add font-x-generic icon and links to it
	Link gnome-mime-text-x-sh to text-x-script
	Link gnome-mime-text-x-vcard to x-office-address-book